complete session management, adjust openapi schemas
