# src/main/java/co/mvpmatch/backendtask1/web/api/UserApiImpl.kt
@@ -2,6 +2,7 @@ package co.mvpmatch.backendtask1.web.api
 
 import co.mvpmatch.backendtask1.config.ROLE_ADMIN
 import co.mvpmatch.backendtask1.service.UserService
+import co.mvpmatch.backendtask1.web.api.model.BaseUserDTO
 import co.mvpmatch.backendtask1.web.api.model.RegistrationDTO
 import co.mvpmatch.backendtask1.web.api.model.UserDTO
 import org.springframework.http.HttpStatus
@@ -16,9 +17,8 @@ class UserApiImpl(
     private val userService: UserService
 ) : UserApi {
 
-    override fun _registration(registrationDTO: RegistrationDTO): ResponseEntity<Void> {
-        userService.register(registrationDTO)
-        return ResponseEntity.status(HttpStatus.CREATED).build()
+    override fun _registration(registrationDTO: RegistrationDTO): ResponseEntity<BaseUserDTO> {
+        return ResponseEntity(userService.register(registrationDTO), HttpStatus.CREATED)
     }
 
     @Secured(ROLE_ADMIN)
