# src/main/resources/swagger/api.yml
@@ -15,6 +15,14 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/LoginResponse'
+
+  /logout/all:
+    get:
+      operationId: terminateAllSessions
+      description: This will terminarte all of user sessions, and invalidates all of tokens
+      responses:
+        204:
+          description: All sessions terminated
   /user:
     get:
       operationId: getAllUsersByAdmin
@@ -36,7 +44,7 @@ paths:
               $ref: '#/components/schemas/RegistrationDTO'
       responses:
         201:
-          description: User created successfully.
+          $ref: '#/components/responses/RegistrationResponse'
 
   /user/{username}:
     put:
@@ -93,7 +101,7 @@ paths:
               $ref: '#/components/schemas/ProductModifyPayload'
       responses:
         201:
-          description: Product added successfully.
+          $ref: '#/components/responses/SingleProductsResponse'
 
   /product/{productName}:
     get:
@@ -127,7 +135,7 @@ paths:
               $ref: '#/components/schemas/ProductModifyPayload'
       responses:
         200:
-          description: Product updated successfully.
+          $ref: '#/components/responses/SingleProductsResponse'
 
     delete:
       operationId: deleteProduct
@@ -215,15 +223,22 @@ components:
             items:
               $ref: '#/components/schemas/UserDTO'
 
+    RegistrationResponse:
+      description: User created successfully.
+      content:
+        application/json:
+          schema:
+              $ref: '#/components/schemas/BaseUserDTO'
+
     SingleProductsResponse:
-      description: List of all products (paged)
+      description: Product information
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/ProductDTO'
 
     AllProductsResponse:
-      description: List of all products (paged)
+      description: List of all products
       content:
         application/json:
           schema:
@@ -239,6 +254,20 @@ components:
         expiresIn:
           type: integer
           format: int64
+        previousSessions:
+          type: array
+          items:
+            $ref: '#/components/schemas/SessionDTO'
+
+    SessionDTO:
+      type: object
+      properties:
+        sessionId:
+          type: string
+        createdAt:
+          type: string
+          format: 'date-time'
+
 
     RolesEnum:
       type: string
@@ -306,7 +335,7 @@ components:
     DepositPayload:
       type: object
       properties:
-        amountsInCent:
+        amountInCent:
           type: integer
           enum: [ 5, 10, 20, 50 , 100 ]
 
